# personal-ai-brain-v3

./: .dockerignore  .env.example  .geminiignore  .gitignore  AGENTS.md  Dockerfile.backend  README.md  README.md.backup  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  project-start-plan-step1.md  pyproject.toml  pytest.ini  requirements-docker.txt  requirements.txt  test.md
.claude/: CLAUDE.md  README.md  settings.json
.cursor/: .cursorignore  keybindings.json  settings.json
.gemini/: settings.json
.github/: copilot-instructions.md
backend/: config.py  lifecycle.py  main.py
backups/: backup_metadata.json
docs/: phase-document-taxonomy.md  phase-document-taxonomy.md.backup
e2e/: phase-10-1-mcp-scenarios.spec.js  phase-10-1.spec.js  phase-10-2.spec.js  phase-10-3.spec.js  phase-10-4.spec.js  phase-11-2.spec.js  phase-11-3.spec.js  phase-12-qc.spec.js  phase-13-4-access-log.spec.js  phase-13-menu-admin-knowledge.spec.js  phase-13-menu-cross.spec.js  phase-13-menu-user.spec.js  phase-14-comprehensive.spec.js  phase-9-1.spec.js  phase-9-3.spec.js  smoke.spec.js
scripts/: README.md  docker-compose-up.sh  llm_server_check.py  webtest.py
tests/: README.md  conftest.py  test_admin_api.py  test_ai_api.py  test_ai_automation_api.py  test_ai_workflow_service.py  test_api_routers.py  test_auth_permissions.py  test_folder_management.py  test_hybrid_search.py  test_keyword_recommenders.py  test_knowledge_api.py  test_models.py  test_reason_document.py  test_reasoning_api.py  test_reasoning_recommendations.py  (+3 more)
(+1455 files in other folders)
